// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable postcss-css-variables if options.cssVariables is false 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": undefined,
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should disable postcss-url if options.url is false 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should have a good base config 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should pass options.advancedVariables to postcss-advanced-variables  1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      "foo",
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should pass options.browsers to postcss-preset-env  1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": "foo",
          "remove": false,
        },
        "browsers": "foo",
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should pass options.cssVariables to postcss-css-variables 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should pass options.import to postcss-import  1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      "foo",
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should pass options.mixins to postcss-mixins  1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      "foo",
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;

exports[`should pass options.url to postcss-url 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-import/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-url/src/index.js",
      Object {
        "foo": "bar",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-mixins/index.js",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-advanced-variables/index.js",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-preset-env/index.js",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "dir-pseudo-class": true,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-color-function/index.js",
      Object {},
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/postcss-calc/dist/index.js",
      Object {},
    ],
  ],
}
`;
